demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app
    app.kubernetes.io/instance: demo-app
  name: demo-app
  namespace: demo-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-app
  type: NodePort
